fixed bug with overflow of scribble if no new lines in original scribble

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -134,6 +134,9 @@ body {
 
 /* New scribble box */
 .scrib-box {
+    overflow: auto;
+    word-break: break-word;
+    overflow-wrap: break-word;
     background-color: var(--davys-gray);
     border: 3px solid var(--rose-quartz);
     width: 75%;
